...
                ),
                dropdownSearchDecoration: InputDecoration(
                  labelText: finDocUpdated.sales ? 'Customer' : 'Supplier',
                  border: OutlineInputBorder(
                      borderRadius: BorderRadius.circular(25.0)),
                ),
                key: Key(finDocUpdated.sales == true ? 'customer' : 'supplier'),
                itemAsString: (User? u) =>
                    "${u!.companyName},\n${u.firstName ?? ''} ${u.lastName ?? ''}",
                asyncItems: (String? filter) async {
                  final finDocBloc = context.read<FinDocBloc>();
                  finDocBloc.add(FinDocGetUsers(
                      userGroups: finDocUpdated.sales == true
...
                    : null,
              ))),
      Expanded(
          child: Padding(
              padding: EdgeInsets.all(10),
              child: TextFormField(
                key: Key('description'),
                decoration: InputDecoration(
                    contentPadding: new EdgeInsets.symmetric(
                        vertical: 35.0, horizontal: 10.0),
                    labelText: '${finDoc.docType} Description'),
                controller: _descriptionController,
              ))),
...
                      finDoc: finDocUpdated.copyWith(
                          otherUser: _selectedUser,
                          description: _descriptionController.text),
                      newItem: finDocItem));
              })),
      ElevatedButton(
          key: Key('addProduct'),
          child: Text('Add Product'),
          onPressed: () async {
            final dynamic finDocItem =
                await addProductItemDialog(context, repos);
            if (finDocItem != null)
              _cartBloc.add(CartAdd(
...
              onPressed: () {
                if (finDocUpdated.items.length > 0) {
                  _cartBloc.add(CartClear());
                }
              }),
          ElevatedButton(
              key: Key('update'),
              child: Text((finDoc.idIsNull() ? 'Create ' : 'Update ') +
                  '${finDocUpdated.docType}'),
              onPressed: () {
                finDocUpdated = finDocUpdated.copyWith(
                    otherUser: _selectedUser,
                    description: _descriptionController.text);
...
                    child: Text("no items found!",
                        key: Key('empty'), textAlign: TextAlign.center));
              final item = items[index - 1];
              var itemType = state.itemTypes
                  .firstWhere((e) => e.itemTypeId == item.itemTypeId);
              return ListTile(
                  key: Key('productItem'),
                  leading: !isPhone
                      ? CircleAvatar(
                          backgroundColor: Colors.green,
                          child: Text(item.itemSeqId.toString()),
                        )
                      : null,
...
                          if (value!.isEmpty) return 'Enter Price or Amount?';
                          return null;
                        },
                      ),
                      SizedBox(height: 20),
                      TextFormField(
                        key: Key('quantity'),
                        decoration: InputDecoration(labelText: 'Quantity'),
                        controller: _quantityController,
                        keyboardType: TextInputType.number,
                      ),
                    ])))),
        actions: <Widget>[
          ElevatedButton(
            key: Key('cancel'),
            child: Text('Cancel'),
            onPressed: () {
              Navigator.of(context).pop();
            },
          ),
          ElevatedButton(
            key: Key('ok'),
            child: Text('Ok'),
            onPressed: () {
              if (_formKey.currentState!.validate())
                Navigator.of(context).pop(FinDocItem(
                  itemTypeId: _selectedItemType!.itemTypeId,
                  price: Decimal.parse(_priceController.text),
...
                              ),
                              dropdownSearchDecoration: InputDecoration(
                                labelText: 'Product',
                                border: OutlineInputBorder(
                                    borderRadius: BorderRadius.circular(25.0)),
                              ),
                              key: Key('product'),
                              itemAsString: (Product? u) =>
                                  "${u!.pseudoId}\n${u.productName}",
                              asyncItems: (String? filter) async {
                                ApiResult<List<Product>> result =
                                    await repos.getProduct(
                                        filter:
...
