...
                                textAlign: TextAlign.center)))
                  ]);
                index--;
                return index >= finDocs.length
                    ? BottomLoader()
                    : Dismissible(
                        key: Key('finDocItem'),
                        direction: DismissDirection.startToEnd,
                        child: FinDocListItem(
                          finDoc: finDocs[index],
                          docType: widget.docType,
                          index: index,
                          isPhone: isPhone,
...
              finDocs = finDocsAll;
            hasReachedMax = state.hasReachedMax;

            return Scaffold(
                floatingActionButton: widget.docType == 'order'
                    ? FloatingActionButton(
                        key: Key("addNew"),
                        onPressed: () async {
                          await showDialog(
                              barrierDismissible: true,
                              context: context,
                              builder: (BuildContext context) {
                                return BlocProvider.value(
...
