...
            "Categories: ${authenticate.stats!.categories}",
            "Products: ${authenticate.stats!.products}",
            "Assets: ${authenticate.stats!.products}",
            "",
          ),
          makeDashboardItem(
            'dbSales',
            context,
            menuOptions[4],
            "Orders: ${authenticate.stats!.openSlsOrders}",
            "Customers: ${authenticate.stats!.customers}",
            "",
            "",
...
